processed/jira/txt/LU/LU-18906.txt
Key:        LU-18906
Summary:    Fix build for gcc-11 / kernel 6.11
Link:       https://jira.whamcloud.com/browse/LU-18906
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Tue, 8 Apr 2025 07:55:23 +0000
Updated:    Tue, 24 Feb 2026 04:33:40 +0000
Resolved:   Fri, 25 Apr 2025 15:21:36 +0000
Links:      Related: is related to LU-18916; Related: is related to LU-18892

--- Description ---
A couple of recent landings have broken new kernel client builds:

  CC [M]  .../lustre-release/lustre/ptlrpc/nrs_orr.o
.../lustre-release/lustre/ptlrpc/nrs_orr.c: In function ‘nrs_orr_supp2str’:
.../lustre-release/lustre/ptlrpc/nrs_orr.c:1680:1: error: control reaches end of non-void function [-Werror=return-type]
 1680 | }
      | ^
cc1: all warnings being treated as errors

Fixes: f7b1fea6bff ("LU-16518 lustre: fix implicit-fallthrough warnings")

.../lustre-release/lustre/llite/file.c: In function ‘ll_dir_finish_open’:
.../lustre-release/lustre/llite/file.c:678:24: error: implicit declaration of function ‘page_cache_alloc’; did you mean ‘kmem_cache_alloc’? [-Werror=implicit-function-declaration]
  678 |                 page = page_cache_alloc(inode->i_mapping);
      |                        ^~~~~~~~~~~~~~~~
      |                        kmem_cache_alloc
.../lustre-release/lustre/llite/file.c:678:22: error: assignment to ‘struct page *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  678 |                 page = page_cache_alloc(inode->i_mapping);
      |                      ^
cc1: all warnings being treated as errors

Fixes: 4a14a51a8e0 ("LU-18448 llite: read dir on open")

--- Comment (pjones, Fri, 25 Apr 2025 15:21:36 +0000) ---
Merged for 2.17

--- Comment (gerrit, Fri, 25 Apr 2025 00:53:18 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/58724/

Subject: LU-18906 build: page_cache_alloc removed, missing return

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 51e5c0e80baf98043d181a376af1b4c1fb368c32

--- Comment (gerrit, Tue, 8 Apr 2025 08:08:27 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/58724

Subject: LU-18906 build: page_cache_alloc removed, missing return

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: ec8e6159c5792145c8219e38949ea593c2eef760
